# InstagramAssetExtraction

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: deps.py  main.py
backend/app/api/: assets.py  config.py  health.py  jobs.py  ws.py
backend/app/core/: errors.py  user_context.py
backend/app/jobs/: runner.py
backend/app/music_id/: audd.py  ig_attribution.py  links.py  window.py
backend/app/pipeline/: audio.py  base.py  cli.py  download.py  finalize.py  music.py  orchestrator.py  sfx.py  speech.py
backend/app/sfx_extract/: align.py  beat_filter.py  orchestrator.py  song_cache.py  subtract.py  yt_download.py
backend/app/static/: index.html
backend/app/static/assets/: index-6SNVe4KO.css  index-6yO6DW6K.js  index-B2bwCIsK.js  index-BKrvghMK.js  index-BYNs32GF.css  index-C-W4z_Ky.css  index-C2N0dVX_.js  index-C9KvWPMn.css  (+9 more)
backend/app/storage/: asset_storage.py  config_store.py  job_store.py
backend/app/ws/: event_bus.py
backend/tests/: conftest.py  test_align.py  test_api_assets.py  test_api_config.py  test_api_identify_music.py  test_api_jobs.py  test_api_ws.py  test_asset_storage.py  test_beat_filter.py  test_config_store.py  test_e2e_fixture.py  test_event_bus.py  test_health.py  test_ig_attribution.py  test_job_store.py  test_music_id.py  test_orchestrator.py  test_pipeline_base.py  test_sfx_extract_orchestrator.py  test_song_cache.py  test_stage_audio.py  test_stage_download.py  test_stage_finalize.py  test_stage_music.py  test_stage_sfx.py  test_stage_speech.py  test_subtract.py  test_user_context.py  test_yt_download.py
(+37 files in other folders)
